Change from h2 to mysql database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,26 @@
 spring.application.name=SpringProject
 
 
-# H2 file
-# H2 database configuration
-spring.datasource.url=jdbc:h2:file:./db/h2-db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-# H2 console settings (optional, for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-## mysql
-## Use one of create/update/create-update
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/verizon_shopping?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-##If your MySql version 5 then use MySQL5Dialect
-#
-## Enable spring data repos
-#spring.data.jpa.repositories.enabled=true
+## H2 file
+## H2 database configuration
+#spring.datasource.url=jdbc:h2:file:./db/h2-db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+## H2 console settings (optional, for development)
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+## Hibernate settings
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.show-sql=true
-#spring.jpa.database=mysql
+#spring.jpa.hibernate.ddl-auto=update
+
+#mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/verizon_shopping
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
